typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('return' type=static),
    span: Span {
        lo: BytePos(
            28,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1.ts:3:5
  |
3 |     return;
  |     ^^^^^^

